--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 22px;
+            font-size: clamp(12px, 3vw, 22px);
             font-weight: bold;
             color: rgba(255, 255, 255, 0.8);
             text-shadow: 1px 1px 2px rgba(0,0,0,0.9), 0 0 4px rgba(0,0,0,0.5);
@@ -123,9 +123,14 @@
         }
 
         .christmas-symbol {
-            font-size: 36px;
+            font-size: clamp(18px, 3.5vw, 36px);
             animation: glow 1.5s ease-in-out infinite alternate;
             filter: drop-shadow(0 0 5px gold);
+        }
+
+        @media (max-width: 480px) {
+            .door-front { font-size: 12px; }
+            .christmas-symbol { font-size: 18px; }
         }
 
         @keyframes glow {
